--- a/gradle.properties
+++ b/gradle.properties
@@ -1,14 +1,16 @@
 # Done to increase the memory available to gradle.
-org.gradle.jvmargs=-Xmx1G
+org.gradle.jvmargs = -Xmx1G
+
 # Fabric Properties
 # check these on https://modmuss50.me/fabric.html
-minecraft_version=1.17.1
-yarn_mappings=1.17.1+build.35
-loader_version=0.11.6
+minecraft_version=1.18
+yarn_mappings=1.18+build.1
+loader_version=0.12.8
+
+#Fabric api
+fabric_version=0.43.1+1.18
+
 # Mod Properties
-mod_version=1.0.1
-maven_group=eu.codedsakura
-archives_base_name=fabric-no-creeper-grief
-# Dependencies
-# check this on https://modmuss50.me/fabric.html
-fabric_version=0.37.2+1.17
+mod_version = 1.0.1
+maven_group = eu.codedsakura
+archives_base_name = fabric-no-creeper-grief
